# nhl_events

./: Cargo.toml  nix.shell  shell.nix
nhl_api/: Cargo.toml  README.md
nhl_api/.openapi-generator/: FILES
nhl_api/docs/: Conference.md  Conferences.md  ConferencesApi.md  Division.md  DivisionConference.md  Divisions.md  DivisionsApi.md  Draft.md  DraftApi.md  DraftDraftsInner.md  DraftDraftsInnerRoundsInner.md  DraftDraftsInnerRoundsInnerPicksInner.md  DraftDraftsInnerRoundsInnerPicksInnerProspect.md  DraftDraftsInnerRoundsInnerPicksInnerTeam.md  DraftProspect.md  DraftProspectAmateurLeague.md  DraftProspectAmateurTeam.md  DraftProspectPrimaryPosition.md  DraftProspectProspectCategory.md  DraftProspects.md  Error.md  Franchise.md  Game.md  GameBoxscore.md  GameBoxscoreTeam.md  GameBoxscoreTeamCoachesInner.md  GameBoxscoreTeamCoachesInnerPerson.md  GameBoxscoreTeamCoachesInnerPosition.md  GameBoxscoreTeamOnIcePlusInner.md  GameBoxscoreTeamPlayers.md  GameBoxscoreTeamPlayersPerson.md  GameBoxscoreTeamPlayersPosition.md  GameBoxscoreTeamPlayersStats.md  GameBoxscoreTeamPlayersStatsSkaterStats.md  GameBoxscoreTeamTeam.md  GameBoxscoreTeamTeamStats.md  GameBoxscoreTeamTeamStatsTeamSkaterStats.md  GameBoxscoreTeams.md  GameBoxscores.md  GameBoxscoresAllOf.md  (+113 more)
nhl_api/src/apis/: conferences_api.rs  configuration.rs  divisions_api.rs  draft_api.rs  games_api.rs  mod.rs  players_api.rs  schedule_api.rs  standings_api.rs  stats_api.rs  teams_api.rs
nhl_api/src/models/: conference.rs  conferences.rs  draft.rs  (+142 more)
src/: main.rs
src/json/: json.rs  mod.rs  schedule.rs  teams.rs
