[package]
name = "nhlevents"
version = "0.1.0"
edition = "2021"

[dependencies]
openapi = { path = "./nhl_api" }
async-std = "1.12.0"
chrono = "0.4.23"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = "0.1.11"
tokio-cron-scheduler = "0.9.4"
url = "2.3.1"
